tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_impl_stricter_than_trait_different_trait_generics/execute__tests__noirc_frontend_tests_impl_stricter_than_trait_different_trait_generics_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error: impl has stricter requirements than trait
  ┌─ src/main.nr:3:12
  │
3 │         fn foo<U>() where T: T2<T>;
  │            --- definition of `foo` from trait
  ·
8 │         fn foo<B>() where A: T2<B> {}
  │                              -- impl has extra requirement `A: T2<B>`
  │

Aborting due to 1 previous error
